# crlf

./: .gitignore  Cargo.toml  LICENSE  shell.nix
crlf/: Cargo.toml
crlf/src/: lib.rs
crlf_service/: Cargo.toml
crlf_service/src/: lib.rs
protocols/ping/: Cargo.toml
protocols/ping/src/: main.rs
protocols/raft/: Cargo.toml
protocols/raft/bins/: client.rs  server.rs  setup_cluster.rs
protocols/raft/src/: lib.rs  main.rs  node.rs
