[package]
name = "crlf"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crlf_service = { path = "../crlf_service" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
