[package]
name = "crlf-raft"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crlf = { path = "../../crlf" }
env_logger = "0.11.2"
log = "0.4.20"
rand = "0.8.5"
